--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 * {
   padding: 0;
   margin: 0;
+/*  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box; */
 }
 
 html {
@@ -11,18 +14,12 @@ html {
 body {
   background: #F9F9F9;
   color: #FFF;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, Sans-serif;
 }
 
 a {
   text-decoration: none;
   color: #FFF;
-}
-
-h1 {
-  background: #000000; /* black */
-  text-align: center;
-  /*margin-top: 1em;  */
 }
 
 ol {
@@ -34,83 +31,74 @@ ol {
   text-align: center;
 }
 
-.close {
-  float: *right;
-  margin-right: 1vw;
-  margin-top: 0.5vh;
+
+.cabecera {
+  background: #000000;
+  display: block;
+  height: 8vh;
+  line-height: 8vh;
+  text-align: center;
+  width: 100%;
+}
+.cabecera h2 {
+  font-size: 2em;
 }
 
 .logo {
   float: left;
-  height: 7vh;
+  height: 6vh;
   margin-left: 1vw;
   margin-top: 0.5vh;
 }
 
-.menu {
-  background: black;
-  display: block;
-  height: 8vh;
-  line-height: 8vh;
-  float: center;
+.close {
+  float: right;
+  height: 6.5vh;
+  margin-right: 1vw;
+  margin-top: 0.75vh;
 }
 
-.container  {
-    width: 100%;
-}
-
-.app-title  {
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    padding-top: 20px;
-    font-size: 32px;
-}
-
-.mosquito  {
+.mosquito {
     width: 215px; /*215px;*/
 	height: 150px;
     margin: 50px auto 50px auto;
 }
-
-.mosquito img  {
+.mosquito img {
     width: 183px; /*183px;*/
 	height: 150px;
 }
 
 
 /* image shake */
-.fuzz  {
-    animation:fuzz 0.1s linear 0s infinite;
+.fuzz {
+            animation: fuzz 0.1s linear 0s infinite;
     -webkit-animation: fuzz 0.1s linear 0s infinite; /* Chrome and Safari */
-    -moz-animation: fuzz 0.1s linear 0s infinite; /* Firefox */
-    -o-animation: fuzz 0.1s linear 0s infinite; /* Opera */
-    backface-visibility:hidden;
-    -webkit-backface-visibility:hidden; /* Chrome and Safari */
-    -moz-backface-visibility:hidden; /* Firefox */
-    -ms-backface-visibility:hidden; /* Internet Explorer */
+       -moz-animation: fuzz 0.1s linear 0s infinite; /* Firefox */
+         -o-animation: fuzz 0.1s linear 0s infinite; /* Opera */
+            backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Chrome and Safari */
+       -moz-backface-visibility: hidden; /* Firefox */
+        -ms-backface-visibility: hidden; /* Internet Explorer */
 }
 
-@keyframes fuzz  {
-    0%   {transform: rotate(5deg) translate3d( 0px,0,0);}
-    25%  {transform: rotate(-5deg) translate3d( -5px,0,0);}
-    50%  {transform: rotate(0deg) translate3d( 0px,0,0);}
-    75%  {transform: rotate(5deg) translate3d( 5px,0,0);}
+@keyframes fuzz {
+    0%  {transform: rotate(5deg) translate3d( 0px,0,0);}
+    25% {transform: rotate(-5deg) translate3d( -5px,0,0);}
+    50% {transform: rotate(0deg) translate3d( 0px,0,0);}
+    75% {transform: rotate(5deg) translate3d( 5px,0,0);}
     100% {transform: rotate(0deg) translate3d( 0px,0,0);}
 }
 
-@-moz-keyframes fuzz /* Firefox */  {
-    0%   {-moz-transform: rotate(5deg) translate3d( 0px,0,0);}
-    25%  {-moz-transform: rotate(-5deg) translate3d( -5px,0,0);}
-    50%  {-moz-transform: rotate(0deg) translate3d( 0px,0,0);}
-    75%  {-moz-transform: rotate(5deg) translate3d( 5px,0,0);}
+@-moz-keyframes fuzz /* Firefox */ {
+    0%  {-moz-transform: rotate(5deg) translate3d( 0px,0,0);}
+    25% {-moz-transform: rotate(-5deg) translate3d( -5px,0,0);}
+    50% {-moz-transform: rotate(0deg) translate3d( 0px,0,0);}
+    75% {-moz-transform: rotate(5deg) translate3d( 5px,0,0);}
     100% {-moz-transform: rotate(0deg) translate3d( 0px,0,0);}
 }
 
 /* ./image shake */
-
-.rate-and-share-container  {
+.rate-and-share-container {
     width: 100%;
     /*position: fixed;*/
     bottom: 70px;
@@ -118,7 +106,7 @@ ol {
 	padding-top: 260px;
 }
 
-.rate-and-share-wrapper  {
+.rate-and-share-wrapper {
     width: 90%;
     max-width: 300px;
     height: 40px;
@@ -130,7 +118,7 @@ ol {
     padding-top: 5px;
 }
 
-.rate-button  {
+.rate-button {
     display: inline-block;
     float: left;
     border: 1px solid #CCCCCC;
@@ -142,22 +130,22 @@ ol {
     outline: none;
 }
 
-.rate-button:hover  {
+.rate-button:hover {
     background-color: #EEE;
 }
 
-.rate-button span.star  {
+.rate-button span.star {
 
 }
 
-.rate-button span.star img  {
+.rate-button span.star img {
     width: 12px;
     display: inline-block;
     height: 11px;
     margin-top: 10px;
 }
 
-.rate-button span.rate-text  {
+.rate-button span.rate-text {
     display: inline-block;
     vertical-align: top;
     font-size: 14px;
@@ -165,7 +153,7 @@ ol {
     color: #555555;
 }
 
-.share-button  {
+.share-button {
     display: inline-block;
     float: right;
     border: 1px solid #CCCCCC;
@@ -178,31 +166,31 @@ ol {
     overflow: hidden;
 }
 
-.share-button:hover  {
+.share-button:hover {
     background-color: #EEE;
 }
 
-.share-button-inner  {
+.share-button-inner {
     width: 74px;
 }
 
-.share-button span.share-logo  {
+.share-button span.share-logo {
     display: inline-block;
     padding-top: 1px;
 }
 
-.share-button span.share-logo img  {
+.share-button span.share-logo img {
     height: 10px;
     width: 10px;
 }
 
-.share-button span.share-text  {
+.share-button span.share-text {
     display: inline-block;
     vertical-align: top;
     margin-left: 1px;
 }
 
-.share-icons  {
+.share-icons {
     position: absolute;
     right: -195px;
     width: 130px;
@@ -215,19 +203,19 @@ ol {
     background: #ffffff;
 }
 
-.share-label  {
+.share-label {
     display: inline-block;
     vertical-align: top;
     margin-right: 5px;
 }
 
-.share-label img  {
+.share-label img {
     height: 16px;
     width: 16px;
     margin-top: 7px;
 }
 
-.share-icon  {
+.share-icon {
     background: #999;
     border-radius: 5px;
     width: 26px;
@@ -237,13 +225,13 @@ ol {
     outline: none;
 }
 
-.share-icon img  {
+.share-icon img {
     width: 80%;
     height: 80%;
     padding: 10%;
 }
 
-.share-close-button  {
+.share-close-button {
     display: inline-block;
     float: right;
     border: 1px solid #CCC;
@@ -257,18 +245,18 @@ ol {
     line-height: 24px;
 }
 
-.share-close-button:hover  {
+.share-close-button:hover {
     background: #EEEEEE;
 }
 
-.button-wrapper  {
+.button-wrapper {
     width: 100%;
     position: fixed;
     bottom: 30px;
     left: 0;
 }
 
-.button  {
+.button {
     width: 90%;
     max-width: 300px;
     height: 40px;
@@ -279,7 +267,7 @@ ol {
     margin: 0 auto;
 }
 
-.buttonitem  {
+.buttonitem {
     width: 18%;
     margin-left: 1%;
     margin-right: 1%;
@@ -292,31 +280,16 @@ ol {
     cursor: pointer;
 }
 
-.buttonitem.active  {
+.buttonitem.active {
     box-shadow: inset 0 0 10px #444;
     background-color: #666;
 }
 
-.buttonspace  {
+.buttonspace {
     width: 18%;
     margin-left: 1%;
     margin-right: 1%;
     float: left;
     text-align: center;
 	color: white;
-}
-
-/* STYLES */
-#spam {display:none;}
-
-.contact_form h2  {
-    background: none repeat scroll 0 0 #F3F3F3;
-    border-radius: 5px;
-    color: #5CD053;
-    display: block;
-    font-family: sans-serif;
-    font-size: 20px;
-    padding: 5px;
-    text-shadow: 1px 1px 1px #CCCCCC;
-    width: 433px;
 }
